[gd_scene load_steps=8 format=2]

[ext_resource path="res://Cenas/map_default.tscn" type="PackedScene" id=1]
[ext_resource path="res://Slime/Cena1.png" type="Texture" id=2]
[ext_resource path="res://Cenas/Mapas/5/Cena5.gd" type="Script" id=3]
[ext_resource path="res://Fonts/new_dynamicfont_small.tres" type="DynamicFont" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Intro"
tracks/0/type = "value"
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 32 ), Vector2( 120, 128 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Smooth"
length = 30.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 4.5, 5, 7.5, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -20 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 9, 9.5, 12, 12.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -20 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("4:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 20, 20.5, 23, 23.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -20 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("5:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 24.5, 25, 27.5, 28 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -20 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 40 )

[node name="Mapa" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Player" parent="." index="0"]
position = Vector2( 120, 32 )

[node name="Background" parent="." index="1"]
texture = ExtResource( 2 )
offset = Vector2( 120, 95 )

[node name="Top" type="CollisionPolygon2D" parent="Walls" index="0"]
polygon = PoolVector2Array( 0, 128, 16, 112, 48, 96, 80, 88, 160, 88, 192, 96, 216, 104, 240, 104, 240, 64, 0, 64 )

[node name="Wall" type="CollisionPolygon2D" parent="Walls" index="1"]
polygon = PoolVector2Array( 0, 152, 24, 176, 56, 184, 200, 184, 216, 176, 256, 176, 256, 104, 240, 104, 240, 96, 264, 96, 264, 200, -8, 200, -8, 128, 0, 128 )

[node name="Intro" type="AnimationPlayer" parent="." index="4"]
anims/Intro = SubResource( 1 )

[node name="Tip" type="CanvasLayer" parent="." index="5"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Tip" index="0"]
anims/Smooth = SubResource( 2 )

[node name="1" type="Node2D" parent="Tip" index="1"]
position = Vector2( 0, -20 )

[node name="ColorRect" type="ColorRect" parent="Tip/1" index="0"]
margin_right = 240.0
margin_bottom = 20.0
color = Color( 0.298039, 0.231373, 0.301961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Tip/1" index="1"]
margin_left = 8.0
margin_top = 1.0
margin_right = 232.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 4 )
text = "Isso aqui e pos-game jam"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Node2D" parent="Tip" index="2"]
position = Vector2( 0, -20 )

[node name="ColorRect" type="ColorRect" parent="Tip/2" index="0"]
margin_right = 240.0
margin_bottom = 20.0
color = Color( 0.298039, 0.231373, 0.301961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Tip/2" index="1"]
margin_left = 8.0
margin_top = 1.0
margin_right = 232.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 4 )
text = "Na real acabou mesmo"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="Node2D" parent="Tip" index="3"]
position = Vector2( 0, -20 )

[node name="ColorRect" type="ColorRect" parent="Tip/3" index="0"]
margin_right = 240.0
margin_bottom = 20.0
color = Color( 0.298039, 0.231373, 0.301961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Tip/3" index="1"]
margin_left = 8.0
margin_top = 1.0
margin_right = 232.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 4 )
text = "Serio pode sair"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="Node2D" parent="Tip" index="4"]
position = Vector2( 0, -20 )

[node name="ColorRect" type="ColorRect" parent="Tip/4" index="0"]
margin_right = 240.0
margin_bottom = 20.0
color = Color( 0.298039, 0.231373, 0.301961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Tip/4" index="1"]
margin_left = 8.0
margin_top = 1.0
margin_right = 232.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 4 )
text = "Vou ser obrigado a expulsar?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5" type="Node2D" parent="Tip" index="5"]
position = Vector2( 0, -20 )

[node name="ColorRect" type="ColorRect" parent="Tip/5" index="0"]
margin_right = 240.0
margin_bottom = 20.0
color = Color( 0.298039, 0.231373, 0.301961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Tip/5" index="1"]
margin_left = 8.0
margin_top = 1.0
margin_right = 232.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 4 )
text = "Beleza entao"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="." index="6"]
position = Vector2( 256, 136 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 3 )

[node name="Satan" type="Position2D" parent="." index="7"]
position = Vector2( 120, 112 )
[connection signal="animation_finished" from="Intro" to="." method="_on_Intro_animation_finished"]
[connection signal="animation_finished" from="Tip/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
